added db connection configuration (jdbc.properties, hibernate.properties, docker-compose.yml for docker with 2 images -- postgres and pgadmin --).
set up those properties in the ShopConfiguration class.

Partly set up first Entity class (Payment), including a *borrowed* custom FastMoneyUserType for Hibernate to be able to map the type to table columns.