@@ -1,15 +1,13 @@
 package com.adison.shop;
 
-import com.adison.shop.common.retry.RetryExecutor;
 import com.adison.shop.orders.Order;
 import com.adison.shop.payments.LocalMoney;
 import com.adison.shop.products.Product;
 import com.adison.shop.products.ProductType;
 import lombok.extern.java.Log;
+import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
-import org.springframework.context.support.ClassPathXmlApplicationContext;
 
-import java.util.Collections;
 import java.util.List;
 
 @Log
@@ -41,14 +39,13 @@ public class Application {
             shopService.addProduct(BOOK_PRODUCT);
             log.info(shopService.listProducts(0, 20).toString());
 
-            var order = new Order(Collections.emptyList());
+            var order = new Order(List.of(VIDEO_PRODUCT, BOOK_PRODUCT));
             //you give the order an id when you place it (the magic of the map repo)
             shopService.placeOrder(order);
             var payment = shopService.payForOder(order.getId());
             log.info(payment.toString());
 
-            var retryExecutor = new RetryExecutor();
-            retryExecutor.setAttempts(5);
+            
         }
     }
 }
